Tue Mar 23 12:22:53 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/Configuration.cc(Add): Fix function to avoid infinite loop
	on some systems, which don't allow all the letters in isalnum() that
	isalpha() does, e.g. accented ones.

	* htdig/HTML.cc: Fix three reported bugs about inconsistent
	handling of space and punctuation in title, href description & head.
	Now makes destinction between tags that cause word breaks and those
	that don't, and which of the latter add space.

Tue Mar 23 12:15:48 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Plaintext.cc(parse): Use minimum_word_length instead of
	hardcoded constant.

Tue Mar 23 12:11:04 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htmerge/words.cc(mergeWords): Fix to prevent description text
	words from clobbering anchor number of merged anchor text words.

Tue Mar 23 12:02:00 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(generateStars): Add in support for use_star_image
	which was lost when template support was put in way back when.

Tue Mar 23 11:47:52 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* Makefile.in: add missing ';' in for loops, between fi & done

Mon Mar 22 16:06:15 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc: Check for presence of more than one <title> tag.

Mon Mar 22 15:32:15 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/parse_doc.pl: Fix handling of minimum word length.

Sun Mar 21 15:19:00 1999  Hans-Peter Nilsson  <hp@bitrange.com>

	* htlib/HtPack.cc (htPack): New.
	* htlib/HtPack.h: New.
	* htsearch/parser.cc (perform_push): Unpack WordRecords using
	htUnpack.
	* htsearch/htsearch.h: Add "debug" declaration.
	* htmerge/words.cc (mergeWords): Pack WordRecords using htPack.
	* htlib/Makefile.in (OBJS): Add HtPack.o
	* htcommon/WordRecord.h: Add WORD_RECORD_COMPRESSED_FORMAT

	* htdig/HTML.cc (parse): Keep contents in String variable